updated to Javafx 15